force-app/main/default/objects/SmartIntake_Question__mdt/SmartIntake_Question__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Question</label>
    <pluralLabel>SmartIntake Questions</pluralLabel>
</CustomObject>