force-app/main/default/objects/SmartIntake_Question__mdt/fields/Accepted_Input_Formats__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Input_Formats__c</fullName>
    <description>Semicolon-separated accepted user input formats for normalized conversational answers. Example for dates: YYYY-MM-DD;DD/MM/YYYY.</description>
    <label>Accepted Input Formats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>