force-app/main/default/objects/SmartIntake_Question__mdt/fields/Confirm_AI_Extracted_Answer__c.field-meta.xml
<CustomField>
    <fullName>Confirm_AI_Extracted_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm AI Extracted Answer</label>
    <type>Checkbox</type>
</CustomField>