force-app/main/default/objects/SmartIntake_Question__mdt/fields/Data_Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Key__c</fullName>
    <description>Stored SmartIntake answer key used as the data source for custom renderers, such as PRODUCT_RESULTS.</description>
    <label>Data Source Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>