force-app/main/default/objects/SmartIntake_Question__mdt/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <label>Input Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>