force-app/main/default/objects/SmartIntake_Question__mdt/fields/Placeholder_Text__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Text__c</fullName>
    <label>Placeholder Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>