force-app/main/default/objects/SmartIntake_Question__mdt/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <label>Question Order</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>