force-app/main/default/objects/SmartIntake_Question__mdt/fields/Render_Lightning_Input__c.field-meta.xml
<CustomField>
    <fullName>Render_Lightning_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the SmartIntake Agentforce renderer should show an inline Lightning input/control for this question. Leave unchecked for plain chat text answers.</description>
    <label>Render Lightning Input</label>
    <type>Checkbox</type>
</CustomField>