force-app/main/default/objects/SmartIntake_Question__mdt/fields/UI_Control__c.field-meta.xml
<CustomField>
    <fullName>UI_Control__c</fullName>
    <label>UI Control</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>